--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
       "output": {
         ".html": {
           "relative_path": "api/Global.AttackController.html",
-          "hash": "wYSsLwNQC4aF/yghaP28iA=="
+          "hash": "WKUoSXlaubW084NM3B7GnQ=="
         }
       },
       "is_incremental": false,
@@ -30,7 +30,7 @@
       "output": {
         ".html": {
           "relative_path": "api/Global.DeathZone.html",
-          "hash": "BLfhUnP+ZUs/FrTk4WOfJw=="
+          "hash": "vIqczUh4JTYhHgvuBJzAjw=="
         }
       },
       "is_incremental": false,
@@ -42,7 +42,7 @@
       "output": {
         ".html": {
           "relative_path": "api/Global.EnemySpawner.html",
-          "hash": "+lhPAvoFqeVIA1FV4BHoLQ=="
+          "hash": "Xx1vjvduNmg21LRIIocwKw=="
         }
       },
       "is_incremental": false,
@@ -54,7 +54,7 @@
       "output": {
         ".html": {
           "relative_path": "api/Global.HoboController.html",
-          "hash": "W5FAnB8hKHWNYX2mFvJRJA=="
+          "hash": "ceZ9S2Nq7LocEu92wwAHAg=="
         }
       },
       "is_incremental": false,
@@ -66,7 +66,7 @@
       "output": {
         ".html": {
           "relative_path": "api/Global.MovingPlatformController.html",
-          "hash": "gRwFoHkOtYFm2LjrzzeRKA=="
+          "hash": "+yYiEGJJD3tpZYrE5Utltg=="
         }
       },
       "is_incremental": false,
@@ -78,7 +78,7 @@
       "output": {
         ".html": {
           "relative_path": "api/Global.PlayerController.html",
-          "hash": "fV05HbZ656kaxDeOMuQrlQ=="
+          "hash": "gIwJc+vhdU4mSFUDLCHaFQ=="
         }
       },
       "is_incremental": false,
@@ -90,7 +90,7 @@
       "output": {
         ".html": {
           "relative_path": "api/Global.PlayerTestingUI.html",
-          "hash": "Cmo2gmNK7x4gvPZcQvdDhw=="
+          "hash": "w9bb5y0S79nKmGpIIrH2JA=="
         }
       },
       "is_incremental": false,
@@ -102,7 +102,7 @@
       "output": {
         ".html": {
           "relative_path": "api/Global.ProjectileController.html",
-          "hash": "k2B+Fzl2H9oDGy752DGOuQ=="
+          "hash": "XgvzSeg7q68pucK1DHcEJA=="
         }
       },
       "is_incremental": false,
@@ -114,7 +114,7 @@
       "output": {
         ".html": {
           "relative_path": "api/Global.ScoreManager.html",
-          "hash": "4XACUfUWwk6s1MzCmXzmFg=="
+          "hash": "3HJq2JrU5vfJFQSQFPHdWQ=="
         }
       },
       "is_incremental": false,
@@ -126,7 +126,7 @@
       "output": {
         ".html": {
           "relative_path": "api/Global.ScrollingCameraController.html",
-          "hash": "bAd00jXjRjBUyGliPogO2w=="
+          "hash": "eXaKjad6HWiL+FEXrg4xvQ=="
         }
       },
       "is_incremental": false,
@@ -138,7 +138,7 @@
       "output": {
         ".html": {
           "relative_path": "api/Global.SpiderController.html",
-          "hash": "0Qkcan7UTVnRo1hbrEGoyw=="
+          "hash": "2qJ9loG6qwUyTQpbr7IYuA=="
         }
       },
       "is_incremental": false,
@@ -150,7 +150,7 @@
       "output": {
         ".html": {
           "relative_path": "api/Global.TimerController.html",
-          "hash": "4djBzl67+UIlAhPwie2S/Q=="
+          "hash": "sHuoM47T2N0QCYj/WvEvDw=="
         }
       },
       "is_incremental": false,
@@ -162,7 +162,7 @@
       "output": {
         ".html": {
           "relative_path": "api/Global.html",
-          "hash": "0PeNPVyLVVNhLJ9Abg7btA=="
+          "hash": "omCSwStK0RPZVXx95U5XxA=="
         }
       },
       "is_incremental": false,
@@ -174,7 +174,7 @@
       "output": {
         ".html": {
           "relative_path": "api/index.html",
-          "hash": "0WEPkvIshysvzg1ovLU2lg=="
+          "hash": "WsXjoyaPE7ymv5XUL7/0SA=="
         }
       },
       "is_incremental": false,
@@ -194,11 +194,23 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "articles/howToAddNewDocument.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/howToAddNewDocument.html",
+          "hash": "SHGOv9G29ZbLyYBiGKLFJQ=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "articles/intro.md",
       "output": {
         ".html": {
           "relative_path": "articles/intro.html",
-          "hash": "fDe7koFFgWWlgad1nzHRfg=="
+          "hash": "9S+AZy8Icy8fARQ19BvNDw=="
         }
       },
       "is_incremental": false,
@@ -210,7 +222,40 @@
       "output": {
         ".html": {
           "relative_path": "articles/toc.html",
-          "hash": "gB8AESyvNru97tzIZofEEg=="
+          "hash": "c1OE98WRHuQa8uRMAHSG5w=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "images/exampleDocumentation.png",
+      "output": {
+        "resource": {
+          "relative_path": "images/exampleDocumentation.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "images/favicon.ico",
+      "output": {
+        "resource": {
+          "relative_path": "images/favicon.ico"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "images/logo.png",
+      "output": {
+        "resource": {
+          "relative_path": "images/logo.png"
         }
       },
       "is_incremental": false,
@@ -222,7 +267,7 @@
       "output": {
         ".html": {
           "relative_path": "index.html",
-          "hash": "2fpkRxBMN9VngdPEHXK3cw=="
+          "hash": "sgeebzXba18dn2XKew6t3Q=="
         }
       },
       "is_incremental": false,
@@ -255,13 +300,20 @@
         "ConceptualDocumentProcessor": {
           "can_incremental": false,
           "incrementalPhase": "build",
-          "total_file_count": 3,
+          "total_file_count": 4,
           "skipped_file_count": 0
         },
         "ManagedReferenceDocumentProcessor": {
           "can_incremental": false,
           "incrementalPhase": "build",
           "total_file_count": 13,
+          "skipped_file_count": 0
+        },
+        "ResourceDocumentProcessor": {
+          "can_incremental": false,
+          "details": "Processor ResourceDocumentProcessor cannot support incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "incrementalPhase": "build",
+          "total_file_count": 0,
           "skipped_file_count": 0
         },
         "TocDocumentProcessor": {
